feat: add create or update query settings
